Run update-remote.sh on geonetwork