@@ -20,7 +20,7 @@
 ## `geonetwork:3.10`
 
 ```console
-$ docker pull geonetwork@sha256:0776811a24725846ba0b0ce9094e24a63e345ac91e0d8a3e6967ea36375be92f
+$ docker pull geonetwork@sha256:6db0b9dcdc03ed0a0d2060668d5bead7c9edb7fda0cf938fca434cb178503c2d
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -30,14 +30,14 @@ $ docker pull geonetwork@sha256:0776811a24725846ba0b0ce9094e24a63e345ac91e0d8a3e
 ### `geonetwork:3.10` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:67652389aa44771ce3895d287858f0bec37cb3a4fbc24a3d802f0ae226e5a501
+$ docker pull geonetwork@sha256:90e9bdd348761850e9d3c6631f3a4efe23aa801d32d4fedb1971e1820eb053bb
 ```
 
 -	Docker Version: 18.09.7
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **452.5 MB (452512541 bytes)**  
+-	Total Size: **452.6 MB (452564780 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:24cb502d50b674a53ffd27f8602252246042671a6d7e9f36a4fc482b10bee597`
+-	Image ID: `sha256:0bd9014e0b03811d546c7d1e92350cdcbe62757a380fc5f5cacfa6707de30612`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -104,19 +104,19 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Wed, 10 Jun 2020 09:36:34 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Wed, 10 Jun 2020 09:36:34 GMT
-ENV GN_VERSION=3.10.2
-# Wed, 10 Jun 2020 09:36:34 GMT
-ENV GN_DOWNLOAD_MD5=d2900cdda7aafaada326a36a86f6296a
-# Wed, 10 Jun 2020 09:36:34 GMT
+# Thu, 25 Jun 2020 19:22:47 GMT
+ENV GN_VERSION=3.10.3
+# Thu, 25 Jun 2020 19:22:47 GMT
+ENV GN_DOWNLOAD_MD5=f6d62ef8856d697e62c7cbde65e66ad7
+# Thu, 25 Jun 2020 19:22:48 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Wed, 10 Jun 2020 09:36:58 GMT
-RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/geonetwork.war/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Wed, 10 Jun 2020 09:36:59 GMT
+# Thu, 25 Jun 2020 19:23:55 GMT
+RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
+# Thu, 25 Jun 2020 19:23:55 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Wed, 10 Jun 2020 09:36:59 GMT
+# Thu, 25 Jun 2020 19:23:55 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Wed, 10 Jun 2020 09:36:59 GMT
+# Thu, 25 Jun 2020 19:23:56 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -161,27 +161,353 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Wed, 10 Jun 2020 08:45:38 GMT  
 		Size: 130.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:75c708b69fb84427e298b0f711c997fceebd588f4e34810c22c6eba70feb6aa6`  
-		Last Modified: Wed, 10 Jun 2020 09:41:02 GMT  
-		Size: 211.4 MB (211370648 bytes)  
+	-	`sha256:fd707bb67af77b045bb156637db8ffb37e40ac2ff795a085472b87adc2e2c824`  
+		Last Modified: Thu, 25 Jun 2020 19:24:57 GMT  
+		Size: 211.4 MB (211422887 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:acc721f8e5c48a2c146f91838a1fe6f42472f48b28bcec65ce5ef4ce9ee3171b`  
-		Last Modified: Wed, 10 Jun 2020 09:40:47 GMT  
+	-	`sha256:1199fdd3ff58cb074a3e1da0f83f3de8908606b0a8f7a4043c5357f9a23d5143`  
+		Last Modified: Thu, 25 Jun 2020 19:24:39 GMT  
 		Size: 249.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.10.3`
 
-**does not exist** (yet?)
+```console
+$ docker pull geonetwork@sha256:6db0b9dcdc03ed0a0d2060668d5bead7c9edb7fda0cf938fca434cb178503c2d
+```
+
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
+-	Platforms:
+	-	linux; amd64
+
+### `geonetwork:3.10.3` - linux; amd64
+
+```console
+$ docker pull geonetwork@sha256:90e9bdd348761850e9d3c6631f3a4efe23aa801d32d4fedb1971e1820eb053bb
+```
+
+-	Docker Version: 18.09.7
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **452.6 MB (452564780 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:0bd9014e0b03811d546c7d1e92350cdcbe62757a380fc5f5cacfa6707de30612`
+-	Entrypoint: `["\/entrypoint.sh"]`
+-	Default Command: `["catalina.sh","run"]`
+
+```dockerfile
+# Tue, 09 Jun 2020 01:20:39 GMT
+ADD file:1ab357efe422cfed5e37af2dc60d07ccfd4bdee4d4a0c00838b5d68f19ff20c7 in / 
+# Tue, 09 Jun 2020 01:20:39 GMT
+CMD ["bash"]
+# Tue, 09 Jun 2020 01:46:35 GMT
+RUN apt-get update && apt-get install -y --no-install-recommends 		ca-certificates 		curl 		netbase 		wget 	&& rm -rf /var/lib/apt/lists/*
+# Tue, 09 Jun 2020 01:46:41 GMT
+RUN set -ex; 	if ! command -v gpg > /dev/null; then 		apt-get update; 		apt-get install -y --no-install-recommends 			gnupg 			dirmngr 		; 		rm -rf /var/lib/apt/lists/*; 	fi
+# Tue, 09 Jun 2020 01:47:05 GMT
+RUN apt-get update && apt-get install -y --no-install-recommends 		git 		mercurial 		openssh-client 		subversion 				procps 	&& rm -rf /var/lib/apt/lists/*
+# Tue, 09 Jun 2020 16:36:48 GMT
+RUN set -eux; 	apt-get update; 	apt-get install -y --no-install-recommends 		bzip2 		unzip 		xz-utils 				ca-certificates p11-kit 				fontconfig libfreetype6 	; 	rm -rf /var/lib/apt/lists/*
+# Tue, 09 Jun 2020 16:36:48 GMT
+ENV LANG=C.UTF-8
+# Tue, 09 Jun 2020 16:38:40 GMT
+ENV JAVA_HOME=/usr/local/openjdk-8
+# Tue, 09 Jun 2020 16:38:41 GMT
+ENV PATH=/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Tue, 09 Jun 2020 16:38:41 GMT
+RUN { echo '#/bin/sh'; echo 'echo "$JAVA_HOME"'; } > /usr/local/bin/docker-java-home && chmod +x /usr/local/bin/docker-java-home && [ "$JAVA_HOME" = "$(docker-java-home)" ]
+# Tue, 09 Jun 2020 16:38:42 GMT
+ENV JAVA_VERSION=8u252
+# Tue, 09 Jun 2020 16:38:42 GMT
+ENV JAVA_BASE_URL=https://github.com/AdoptOpenJDK/openjdk8-upstream-binaries/releases/download/jdk8u252-b09/OpenJDK8U-jdk_
+# Tue, 09 Jun 2020 16:38:42 GMT
+ENV JAVA_URL_VERSION=8u252b09
+# Tue, 09 Jun 2020 16:38:50 GMT
+RUN set -eux; 		dpkgArch="$(dpkg --print-architecture)"; 	case "$dpkgArch" in 		amd64) upstreamArch='x64' ;; 		arm64) upstreamArch='aarch64' ;; 		*) echo >&2 "error: unsupported architecture: $dpkgArch" ;; 	esac; 		wget -O openjdk.tgz.asc "${JAVA_BASE_URL}${upstreamArch}_linux_${JAVA_URL_VERSION}.tar.gz.sign"; 	wget -O openjdk.tgz "${JAVA_BASE_URL}${upstreamArch}_linux_${JAVA_URL_VERSION}.tar.gz" --progress=dot:giga; 		export GNUPGHOME="$(mktemp -d)"; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --keyserver-options no-self-sigs-only --recv-keys CA5F11C6CE22644D42C6AC4492EF8D39DC13168F; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys EAC843EBD3EFDB98CC772FADA5CD6035332FA671; 	gpg --batch --list-sigs --keyid-format 0xLONG CA5F11C6CE22644D42C6AC4492EF8D39DC13168F 		| tee /dev/stderr 		| grep '0xA5CD6035332FA671' 		| grep 'Andrew Haley'; 	gpg --batch --verify openjdk.tgz.asc openjdk.tgz; 	gpgconf --kill all; 	rm -rf "$GNUPGHOME"; 		mkdir -p "$JAVA_HOME"; 	tar --extract 		--file openjdk.tgz 		--directory "$JAVA_HOME" 		--strip-components 1 		--no-same-owner 	; 	rm openjdk.tgz*; 			{ 		echo '#!/usr/bin/env bash'; 		echo 'set -Eeuo pipefail'; 		echo 'if ! [ -d "$JAVA_HOME" ]; then echo >&2 "error: missing JAVA_HOME environment variable"; exit 1; fi'; 		echo 'cacertsFile=; for f in "$JAVA_HOME/lib/security/cacerts" "$JAVA_HOME/jre/lib/security/cacerts"; do if [ -e "$f" ]; then cacertsFile="$f"; break; fi; done'; 		echo 'if [ -z "$cacertsFile" ] || ! [ -f "$cacertsFile" ]; then echo >&2 "error: failed to find cacerts file in $JAVA_HOME"; exit 1; fi'; 		echo 'trust extract --overwrite --format=java-cacerts --filter=ca-anchors --purpose=server-auth "$cacertsFile"'; 	} > /etc/ca-certificates/update.d/docker-openjdk; 	chmod +x /etc/ca-certificates/update.d/docker-openjdk; 	/etc/ca-certificates/update.d/docker-openjdk; 		find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf; 	ldconfig; 		javac -version; 	java -version
+# Wed, 10 Jun 2020 08:10:00 GMT
+ENV CATALINA_HOME=/usr/local/tomcat
+# Wed, 10 Jun 2020 08:10:00 GMT
+ENV PATH=/usr/local/tomcat/bin:/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Wed, 10 Jun 2020 08:10:01 GMT
+RUN mkdir -p "$CATALINA_HOME"
+# Wed, 10 Jun 2020 08:10:01 GMT
+WORKDIR /usr/local/tomcat
+# Wed, 10 Jun 2020 08:10:01 GMT
+ENV TOMCAT_NATIVE_LIBDIR=/usr/local/tomcat/native-jni-lib
+# Wed, 10 Jun 2020 08:10:02 GMT
+ENV LD_LIBRARY_PATH=/usr/local/tomcat/native-jni-lib
+# Wed, 10 Jun 2020 08:34:09 GMT
+ENV GPG_KEYS=05AB33110949707C93A279E3D3EFE6B686867BA6 07E48665A34DCAFAE522E5E6266191C37C037D42 47309207D818FFD8DCD3F83F1931D684307A10A5 541FBE7D8F78B25E055DDEE13C370389288584E7 61B832AC2F1C5A90F0F9B00A1C506407564C17A3 713DA88BE50911535FE716F5208B0AB1D63011C7 79F7026C690BAA50B92CD8B66A3AD3F4F22C4FED 9BA44C2621385CB966EBA586F72C284D731FABEE A27677289986DB50844682F8ACB77FC2E86E29AC A9C5DF4D22E99998D9875A5110C01C5A2F6059E7 DCFD35E0BF8CA7344752DE8B6FB21E8933C60243 F3A04C595DB5B6A5F1ECA43E3B7BBB100D811BBE F7DA48BB64BCB84ECBA7EE6935CD23C10D498E23
+# Wed, 10 Jun 2020 08:34:09 GMT
+ENV TOMCAT_MAJOR=8
+# Wed, 10 Jun 2020 08:34:10 GMT
+ENV TOMCAT_VERSION=8.5.56
+# Wed, 10 Jun 2020 08:34:10 GMT
+ENV TOMCAT_SHA512=7a02a8e0b12eea2e0bf1175d754bd19dc445e7182c2db033ba6ca1330161cc74207c9b9b7f0fce510417ece28f26cc36816b34eb394b0d27350631e64204aed3
+# Wed, 10 Jun 2020 08:34:36 GMT
+RUN set -eux; 		savedAptMark="$(apt-mark showmanual)"; 	apt-get update; 	apt-get install -y --no-install-recommends 		gnupg dirmngr 		wget ca-certificates 	; 		ddist() { 		local f="$1"; shift; 		local distFile="$1"; shift; 		local mvnFile="${1:-}"; 		local success=; 		local distUrl=; 		for distUrl in 			"https://www.apache.org/dyn/closer.cgi?action=download&filename=$distFile" 			"https://www-us.apache.org/dist/$distFile" 			"https://www.apache.org/dist/$distFile" 			"https://archive.apache.org/dist/$distFile" 			${mvnFile:+"https://repo1.maven.org/maven2/org/apache/tomcat/tomcat/$mvnFile"} 		; do 			if wget -O "$f" "$distUrl" && [ -s "$f" ]; then 				success=1; 				break; 			fi; 		done; 		[ -n "$success" ]; 	}; 		ddist 'tomcat.tar.gz' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz" "$TOMCAT_VERSION/tomcat-$TOMCAT_VERSION.tar.gz"; 	echo "$TOMCAT_SHA512 *tomcat.tar.gz" | sha512sum --strict --check -; 	ddist 'tomcat.tar.gz.asc' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz.asc" "$TOMCAT_VERSION/tomcat-$TOMCAT_VERSION.tar.gz.asc"; 	export GNUPGHOME="$(mktemp -d)"; 	for key in $GPG_KEYS; do 		gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; 	done; 	gpg --batch --verify tomcat.tar.gz.asc tomcat.tar.gz; 	tar -xf tomcat.tar.gz --strip-components=1; 	rm bin/*.bat; 	rm tomcat.tar.gz*; 	command -v gpgconf && gpgconf --kill all || :; 	rm -rf "$GNUPGHOME"; 		mv webapps webapps.dist; 	mkdir webapps; 		nativeBuildDir="$(mktemp -d)"; 	tar -xf bin/tomcat-native.tar.gz -C "$nativeBuildDir" --strip-components=1; 	apt-get install -y --no-install-recommends 		dpkg-dev 		gcc 		libapr1-dev 		libssl-dev 		make 	; 	( 		export CATALINA_HOME="$PWD"; 		cd "$nativeBuildDir/native"; 		gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)"; 		aprConfig="$(command -v apr-1-config)"; 		./configure 			--build="$gnuArch" 			--libdir="$TOMCAT_NATIVE_LIBDIR" 			--prefix="$CATALINA_HOME" 			--with-apr="$aprConfig" 			--with-java-home="$JAVA_HOME" 			--with-ssl=yes; 		make -j "$(nproc)"; 		make install; 	); 	rm -rf "$nativeBuildDir"; 	rm bin/tomcat-native.tar.gz; 		apt-mark auto '.*' > /dev/null; 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null; 	find "$TOMCAT_NATIVE_LIBDIR" -type f -executable -exec ldd '{}' ';' 		| awk '/=>/ { print $(NF-1) }' 		| sort -u 		| xargs -r dpkg-query --search 		| cut -d: -f1 		| sort -u 		| xargs -r apt-mark manual 	; 	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; 	rm -rf /var/lib/apt/lists/*; 		find ./bin/ -name '*.sh' -exec sed -ri 's|^#!/bin/sh$|#!/usr/bin/env bash|' '{}' +; 		chmod -R +rX .; 	chmod 777 logs temp work
+# Wed, 10 Jun 2020 08:34:39 GMT
+RUN set -e 	&& nativeLines="$(catalina.sh configtest 2>&1)" 	&& nativeLines="$(echo "$nativeLines" | grep 'Apache Tomcat Native')" 	&& nativeLines="$(echo "$nativeLines" | sort -u)" 	&& if ! echo "$nativeLines" | grep -E 'INFO: Loaded( APR based)? Apache Tomcat Native library' >&2; then 		echo >&2 "$nativeLines"; 		exit 1; 	fi
+# Wed, 10 Jun 2020 08:34:39 GMT
+EXPOSE 8080
+# Wed, 10 Jun 2020 08:34:40 GMT
+CMD ["catalina.sh" "run"]
+# Wed, 10 Jun 2020 09:36:34 GMT
+ENV GN_FILE=geonetwork.war
+# Wed, 10 Jun 2020 09:36:34 GMT
+ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
+# Wed, 10 Jun 2020 09:36:34 GMT
+ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
+# Thu, 25 Jun 2020 19:22:47 GMT
+ENV GN_VERSION=3.10.3
+# Thu, 25 Jun 2020 19:22:47 GMT
+ENV GN_DOWNLOAD_MD5=f6d62ef8856d697e62c7cbde65e66ad7
+# Thu, 25 Jun 2020 19:22:48 GMT
+WORKDIR /usr/local/tomcat/webapps
+# Thu, 25 Jun 2020 19:23:55 GMT
+RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
+# Thu, 25 Jun 2020 19:23:55 GMT
+COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
+# Thu, 25 Jun 2020 19:23:55 GMT
+ENTRYPOINT ["/entrypoint.sh"]
+# Thu, 25 Jun 2020 19:23:56 GMT
+CMD ["catalina.sh" "run"]
+```
+
+-	Layers:
+	-	`sha256:e9afc4f90ab09248d75c8081b6dfba749a7f7efdac704ced7e0ceb506e02fa4a`  
+		Last Modified: Tue, 09 Jun 2020 01:25:37 GMT  
+		Size: 50.4 MB (50389504 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:989e6b19a265d6b8b7934e7ddd7dc07f6e2fc945b3a28dda9b8aecb12cdb30e0`  
+		Last Modified: Tue, 09 Jun 2020 01:59:52 GMT  
+		Size: 7.8 MB (7811709 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:af14b6c2f8785723bceb5964c5dec1f0489b7750e9d4ec671e49bfba15d80a39`  
+		Last Modified: Tue, 09 Jun 2020 01:59:52 GMT  
+		Size: 10.0 MB (9996168 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:5573c4b3094956931fd68c310ae92c9eb1a787f0c77ac2730be9d16cce172d5e`  
+		Last Modified: Tue, 09 Jun 2020 02:00:08 GMT  
+		Size: 51.8 MB (51827493 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:fb1a405f128d35ffb78464f5ac9f15e721e0d205b94360e151d60f32f9b38111`  
+		Last Modified: Tue, 09 Jun 2020 16:43:42 GMT  
+		Size: 5.3 MB (5284640 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:197b0f525c2645359f6ff5163a3f2e656358750e87910b9428145509120fc8f2`  
+		Last Modified: Tue, 09 Jun 2020 16:45:42 GMT  
+		Size: 211.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:f133ed18cacaf9f3f44ae673c428b6a4787f51f51e74d4bde7a86cfd6ca8891f`  
+		Last Modified: Tue, 09 Jun 2020 16:46:10 GMT  
+		Size: 104.4 MB (104442372 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:a9e4d603b928f3853d878c8c40206ca491bb67acf158afa42055633fc2bf1ea3`  
+		Last Modified: Wed, 10 Jun 2020 08:42:06 GMT  
+		Size: 139.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:36ba042bc5aef293f3c4dd7273e0fd30719942bbcfa5071b4d47253a99e787e6`  
+		Last Modified: Wed, 10 Jun 2020 08:45:40 GMT  
+		Size: 11.4 MB (11389278 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:b916ca25745f3c8fde633f86b073b98446316624cb61d966d358945297987ce5`  
+		Last Modified: Wed, 10 Jun 2020 08:45:38 GMT  
+		Size: 130.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:fd707bb67af77b045bb156637db8ffb37e40ac2ff795a085472b87adc2e2c824`  
+		Last Modified: Thu, 25 Jun 2020 19:24:57 GMT  
+		Size: 211.4 MB (211422887 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:1199fdd3ff58cb074a3e1da0f83f3de8908606b0a8f7a4043c5357f9a23d5143`  
+		Last Modified: Thu, 25 Jun 2020 19:24:39 GMT  
+		Size: 249.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.10.3-postgres`
 
-**does not exist** (yet?)
+```console
+$ docker pull geonetwork@sha256:b686a46c3f5f11e4bb2d79c3f99c6b389895ffa8d2f5795091635e1b03f6729e
+```
+
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
+-	Platforms:
+	-	linux; amd64
+
+### `geonetwork:3.10.3-postgres` - linux; amd64
+
+```console
+$ docker pull geonetwork@sha256:933c50af822a3e22aa0560646a18c2f170f0bb930bd509320e2b3374d06591ba
+```
+
+-	Docker Version: 18.09.7
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **464.4 MB (464377107 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:dcb4b2f9dc238ff0852a7f2be413d16e5987dbe85f1103bbce0f88384c052480`
+-	Entrypoint: `["\/entrypoint.sh"]`
+-	Default Command: `["catalina.sh","run"]`
+
+```dockerfile
+# Tue, 09 Jun 2020 01:20:39 GMT
+ADD file:1ab357efe422cfed5e37af2dc60d07ccfd4bdee4d4a0c00838b5d68f19ff20c7 in / 
+# Tue, 09 Jun 2020 01:20:39 GMT
+CMD ["bash"]
+# Tue, 09 Jun 2020 01:46:35 GMT
+RUN apt-get update && apt-get install -y --no-install-recommends 		ca-certificates 		curl 		netbase 		wget 	&& rm -rf /var/lib/apt/lists/*
+# Tue, 09 Jun 2020 01:46:41 GMT
+RUN set -ex; 	if ! command -v gpg > /dev/null; then 		apt-get update; 		apt-get install -y --no-install-recommends 			gnupg 			dirmngr 		; 		rm -rf /var/lib/apt/lists/*; 	fi
+# Tue, 09 Jun 2020 01:47:05 GMT
+RUN apt-get update && apt-get install -y --no-install-recommends 		git 		mercurial 		openssh-client 		subversion 				procps 	&& rm -rf /var/lib/apt/lists/*
+# Tue, 09 Jun 2020 16:36:48 GMT
+RUN set -eux; 	apt-get update; 	apt-get install -y --no-install-recommends 		bzip2 		unzip 		xz-utils 				ca-certificates p11-kit 				fontconfig libfreetype6 	; 	rm -rf /var/lib/apt/lists/*
+# Tue, 09 Jun 2020 16:36:48 GMT
+ENV LANG=C.UTF-8
+# Tue, 09 Jun 2020 16:38:40 GMT
+ENV JAVA_HOME=/usr/local/openjdk-8
+# Tue, 09 Jun 2020 16:38:41 GMT
+ENV PATH=/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Tue, 09 Jun 2020 16:38:41 GMT
+RUN { echo '#/bin/sh'; echo 'echo "$JAVA_HOME"'; } > /usr/local/bin/docker-java-home && chmod +x /usr/local/bin/docker-java-home && [ "$JAVA_HOME" = "$(docker-java-home)" ]
+# Tue, 09 Jun 2020 16:38:42 GMT
+ENV JAVA_VERSION=8u252
+# Tue, 09 Jun 2020 16:38:42 GMT
+ENV JAVA_BASE_URL=https://github.com/AdoptOpenJDK/openjdk8-upstream-binaries/releases/download/jdk8u252-b09/OpenJDK8U-jdk_
+# Tue, 09 Jun 2020 16:38:42 GMT
+ENV JAVA_URL_VERSION=8u252b09
+# Tue, 09 Jun 2020 16:38:50 GMT
+RUN set -eux; 		dpkgArch="$(dpkg --print-architecture)"; 	case "$dpkgArch" in 		amd64) upstreamArch='x64' ;; 		arm64) upstreamArch='aarch64' ;; 		*) echo >&2 "error: unsupported architecture: $dpkgArch" ;; 	esac; 		wget -O openjdk.tgz.asc "${JAVA_BASE_URL}${upstreamArch}_linux_${JAVA_URL_VERSION}.tar.gz.sign"; 	wget -O openjdk.tgz "${JAVA_BASE_URL}${upstreamArch}_linux_${JAVA_URL_VERSION}.tar.gz" --progress=dot:giga; 		export GNUPGHOME="$(mktemp -d)"; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --keyserver-options no-self-sigs-only --recv-keys CA5F11C6CE22644D42C6AC4492EF8D39DC13168F; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys EAC843EBD3EFDB98CC772FADA5CD6035332FA671; 	gpg --batch --list-sigs --keyid-format 0xLONG CA5F11C6CE22644D42C6AC4492EF8D39DC13168F 		| tee /dev/stderr 		| grep '0xA5CD6035332FA671' 		| grep 'Andrew Haley'; 	gpg --batch --verify openjdk.tgz.asc openjdk.tgz; 	gpgconf --kill all; 	rm -rf "$GNUPGHOME"; 		mkdir -p "$JAVA_HOME"; 	tar --extract 		--file openjdk.tgz 		--directory "$JAVA_HOME" 		--strip-components 1 		--no-same-owner 	; 	rm openjdk.tgz*; 			{ 		echo '#!/usr/bin/env bash'; 		echo 'set -Eeuo pipefail'; 		echo 'if ! [ -d "$JAVA_HOME" ]; then echo >&2 "error: missing JAVA_HOME environment variable"; exit 1; fi'; 		echo 'cacertsFile=; for f in "$JAVA_HOME/lib/security/cacerts" "$JAVA_HOME/jre/lib/security/cacerts"; do if [ -e "$f" ]; then cacertsFile="$f"; break; fi; done'; 		echo 'if [ -z "$cacertsFile" ] || ! [ -f "$cacertsFile" ]; then echo >&2 "error: failed to find cacerts file in $JAVA_HOME"; exit 1; fi'; 		echo 'trust extract --overwrite --format=java-cacerts --filter=ca-anchors --purpose=server-auth "$cacertsFile"'; 	} > /etc/ca-certificates/update.d/docker-openjdk; 	chmod +x /etc/ca-certificates/update.d/docker-openjdk; 	/etc/ca-certificates/update.d/docker-openjdk; 		find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf; 	ldconfig; 		javac -version; 	java -version
+# Wed, 10 Jun 2020 08:10:00 GMT
+ENV CATALINA_HOME=/usr/local/tomcat
+# Wed, 10 Jun 2020 08:10:00 GMT
+ENV PATH=/usr/local/tomcat/bin:/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Wed, 10 Jun 2020 08:10:01 GMT
+RUN mkdir -p "$CATALINA_HOME"
+# Wed, 10 Jun 2020 08:10:01 GMT
+WORKDIR /usr/local/tomcat
+# Wed, 10 Jun 2020 08:10:01 GMT
+ENV TOMCAT_NATIVE_LIBDIR=/usr/local/tomcat/native-jni-lib
+# Wed, 10 Jun 2020 08:10:02 GMT
+ENV LD_LIBRARY_PATH=/usr/local/tomcat/native-jni-lib
+# Wed, 10 Jun 2020 08:34:09 GMT
+ENV GPG_KEYS=05AB33110949707C93A279E3D3EFE6B686867BA6 07E48665A34DCAFAE522E5E6266191C37C037D42 47309207D818FFD8DCD3F83F1931D684307A10A5 541FBE7D8F78B25E055DDEE13C370389288584E7 61B832AC2F1C5A90F0F9B00A1C506407564C17A3 713DA88BE50911535FE716F5208B0AB1D63011C7 79F7026C690BAA50B92CD8B66A3AD3F4F22C4FED 9BA44C2621385CB966EBA586F72C284D731FABEE A27677289986DB50844682F8ACB77FC2E86E29AC A9C5DF4D22E99998D9875A5110C01C5A2F6059E7 DCFD35E0BF8CA7344752DE8B6FB21E8933C60243 F3A04C595DB5B6A5F1ECA43E3B7BBB100D811BBE F7DA48BB64BCB84ECBA7EE6935CD23C10D498E23
+# Wed, 10 Jun 2020 08:34:09 GMT
+ENV TOMCAT_MAJOR=8
+# Wed, 10 Jun 2020 08:34:10 GMT
+ENV TOMCAT_VERSION=8.5.56
+# Wed, 10 Jun 2020 08:34:10 GMT
+ENV TOMCAT_SHA512=7a02a8e0b12eea2e0bf1175d754bd19dc445e7182c2db033ba6ca1330161cc74207c9b9b7f0fce510417ece28f26cc36816b34eb394b0d27350631e64204aed3
+# Wed, 10 Jun 2020 08:34:36 GMT
+RUN set -eux; 		savedAptMark="$(apt-mark showmanual)"; 	apt-get update; 	apt-get install -y --no-install-recommends 		gnupg dirmngr 		wget ca-certificates 	; 		ddist() { 		local f="$1"; shift; 		local distFile="$1"; shift; 		local mvnFile="${1:-}"; 		local success=; 		local distUrl=; 		for distUrl in 			"https://www.apache.org/dyn/closer.cgi?action=download&filename=$distFile" 			"https://www-us.apache.org/dist/$distFile" 			"https://www.apache.org/dist/$distFile" 			"https://archive.apache.org/dist/$distFile" 			${mvnFile:+"https://repo1.maven.org/maven2/org/apache/tomcat/tomcat/$mvnFile"} 		; do 			if wget -O "$f" "$distUrl" && [ -s "$f" ]; then 				success=1; 				break; 			fi; 		done; 		[ -n "$success" ]; 	}; 		ddist 'tomcat.tar.gz' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz" "$TOMCAT_VERSION/tomcat-$TOMCAT_VERSION.tar.gz"; 	echo "$TOMCAT_SHA512 *tomcat.tar.gz" | sha512sum --strict --check -; 	ddist 'tomcat.tar.gz.asc' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz.asc" "$TOMCAT_VERSION/tomcat-$TOMCAT_VERSION.tar.gz.asc"; 	export GNUPGHOME="$(mktemp -d)"; 	for key in $GPG_KEYS; do 		gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; 	done; 	gpg --batch --verify tomcat.tar.gz.asc tomcat.tar.gz; 	tar -xf tomcat.tar.gz --strip-components=1; 	rm bin/*.bat; 	rm tomcat.tar.gz*; 	command -v gpgconf && gpgconf --kill all || :; 	rm -rf "$GNUPGHOME"; 		mv webapps webapps.dist; 	mkdir webapps; 		nativeBuildDir="$(mktemp -d)"; 	tar -xf bin/tomcat-native.tar.gz -C "$nativeBuildDir" --strip-components=1; 	apt-get install -y --no-install-recommends 		dpkg-dev 		gcc 		libapr1-dev 		libssl-dev 		make 	; 	( 		export CATALINA_HOME="$PWD"; 		cd "$nativeBuildDir/native"; 		gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)"; 		aprConfig="$(command -v apr-1-config)"; 		./configure 			--build="$gnuArch" 			--libdir="$TOMCAT_NATIVE_LIBDIR" 			--prefix="$CATALINA_HOME" 			--with-apr="$aprConfig" 			--with-java-home="$JAVA_HOME" 			--with-ssl=yes; 		make -j "$(nproc)"; 		make install; 	); 	rm -rf "$nativeBuildDir"; 	rm bin/tomcat-native.tar.gz; 		apt-mark auto '.*' > /dev/null; 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null; 	find "$TOMCAT_NATIVE_LIBDIR" -type f -executable -exec ldd '{}' ';' 		| awk '/=>/ { print $(NF-1) }' 		| sort -u 		| xargs -r dpkg-query --search 		| cut -d: -f1 		| sort -u 		| xargs -r apt-mark manual 	; 	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; 	rm -rf /var/lib/apt/lists/*; 		find ./bin/ -name '*.sh' -exec sed -ri 's|^#!/bin/sh$|#!/usr/bin/env bash|' '{}' +; 		chmod -R +rX .; 	chmod 777 logs temp work
+# Wed, 10 Jun 2020 08:34:39 GMT
+RUN set -e 	&& nativeLines="$(catalina.sh configtest 2>&1)" 	&& nativeLines="$(echo "$nativeLines" | grep 'Apache Tomcat Native')" 	&& nativeLines="$(echo "$nativeLines" | sort -u)" 	&& if ! echo "$nativeLines" | grep -E 'INFO: Loaded( APR based)? Apache Tomcat Native library' >&2; then 		echo >&2 "$nativeLines"; 		exit 1; 	fi
+# Wed, 10 Jun 2020 08:34:39 GMT
+EXPOSE 8080
+# Wed, 10 Jun 2020 08:34:40 GMT
+CMD ["catalina.sh" "run"]
+# Wed, 10 Jun 2020 09:36:34 GMT
+ENV GN_FILE=geonetwork.war
+# Wed, 10 Jun 2020 09:36:34 GMT
+ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
+# Wed, 10 Jun 2020 09:36:34 GMT
+ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
+# Thu, 25 Jun 2020 19:22:47 GMT
+ENV GN_VERSION=3.10.3
+# Thu, 25 Jun 2020 19:22:47 GMT
+ENV GN_DOWNLOAD_MD5=f6d62ef8856d697e62c7cbde65e66ad7
+# Thu, 25 Jun 2020 19:22:48 GMT
+WORKDIR /usr/local/tomcat/webapps
+# Thu, 25 Jun 2020 19:23:55 GMT
+RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
+# Thu, 25 Jun 2020 19:23:55 GMT
+COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
+# Thu, 25 Jun 2020 19:23:55 GMT
+ENTRYPOINT ["/entrypoint.sh"]
+# Thu, 25 Jun 2020 19:23:56 GMT
+CMD ["catalina.sh" "run"]
+# Thu, 25 Jun 2020 19:24:17 GMT
+RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/lib/apt/lists/*
+# Thu, 25 Jun 2020 19:24:18 GMT
+RUN sed -i -e 's#<import resource="../config-db/${geonetwork.db.type:h2}.xml"/>#<!--<import resource="../config-db/${geonetwork.db.type:h2}.xml"/-->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
+# Thu, 25 Jun 2020 19:24:18 GMT
+COPY file:83f69d2041e5fb378033b0db57e096c81ba0725102ab4da4f089685e748fcce3 in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
+# Thu, 25 Jun 2020 19:24:18 GMT
+COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
+# Thu, 25 Jun 2020 19:24:18 GMT
+ENTRYPOINT ["/entrypoint.sh"]
+# Thu, 25 Jun 2020 19:24:19 GMT
+CMD ["catalina.sh" "run"]
+```
+
+-	Layers:
+	-	`sha256:e9afc4f90ab09248d75c8081b6dfba749a7f7efdac704ced7e0ceb506e02fa4a`  
+		Last Modified: Tue, 09 Jun 2020 01:25:37 GMT  
+		Size: 50.4 MB (50389504 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:989e6b19a265d6b8b7934e7ddd7dc07f6e2fc945b3a28dda9b8aecb12cdb30e0`  
+		Last Modified: Tue, 09 Jun 2020 01:59:52 GMT  
+		Size: 7.8 MB (7811709 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:af14b6c2f8785723bceb5964c5dec1f0489b7750e9d4ec671e49bfba15d80a39`  
+		Last Modified: Tue, 09 Jun 2020 01:59:52 GMT  
+		Size: 10.0 MB (9996168 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:5573c4b3094956931fd68c310ae92c9eb1a787f0c77ac2730be9d16cce172d5e`  
+		Last Modified: Tue, 09 Jun 2020 02:00:08 GMT  
+		Size: 51.8 MB (51827493 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:fb1a405f128d35ffb78464f5ac9f15e721e0d205b94360e151d60f32f9b38111`  
+		Last Modified: Tue, 09 Jun 2020 16:43:42 GMT  
+		Size: 5.3 MB (5284640 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:197b0f525c2645359f6ff5163a3f2e656358750e87910b9428145509120fc8f2`  
+		Last Modified: Tue, 09 Jun 2020 16:45:42 GMT  
+		Size: 211.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:f133ed18cacaf9f3f44ae673c428b6a4787f51f51e74d4bde7a86cfd6ca8891f`  
+		Last Modified: Tue, 09 Jun 2020 16:46:10 GMT  
+		Size: 104.4 MB (104442372 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:a9e4d603b928f3853d878c8c40206ca491bb67acf158afa42055633fc2bf1ea3`  
+		Last Modified: Wed, 10 Jun 2020 08:42:06 GMT  
+		Size: 139.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:36ba042bc5aef293f3c4dd7273e0fd30719942bbcfa5071b4d47253a99e787e6`  
+		Last Modified: Wed, 10 Jun 2020 08:45:40 GMT  
+		Size: 11.4 MB (11389278 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:b916ca25745f3c8fde633f86b073b98446316624cb61d966d358945297987ce5`  
+		Last Modified: Wed, 10 Jun 2020 08:45:38 GMT  
+		Size: 130.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:fd707bb67af77b045bb156637db8ffb37e40ac2ff795a085472b87adc2e2c824`  
+		Last Modified: Thu, 25 Jun 2020 19:24:57 GMT  
+		Size: 211.4 MB (211422887 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:1199fdd3ff58cb074a3e1da0f83f3de8908606b0a8f7a4043c5357f9a23d5143`  
+		Last Modified: Thu, 25 Jun 2020 19:24:39 GMT  
+		Size: 249.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:ed4db66199e0e2ff55eb78b81050360fcb556c3b9354d34fe2844a2dafc5a268`  
+		Last Modified: Thu, 25 Jun 2020 19:25:05 GMT  
+		Size: 11.8 MB (11808968 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:feed4f840ad95d713d5d3bffa29b3403d60861fd5cacdf7895929f7731fea16f`  
+		Last Modified: Thu, 25 Jun 2020 19:25:03 GMT  
+		Size: 1.3 KB (1264 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:b49ba22d9d4885283a0ac8bc10d36a90e5ee30f458b57a1c80ed3d47731f0222`  
+		Last Modified: Thu, 25 Jun 2020 19:25:03 GMT  
+		Size: 1.1 KB (1122 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:a75ae392ec8c118964c7e38503fa6f3e105e3c749fa6985eeb1af72ac03d8005`  
+		Last Modified: Thu, 25 Jun 2020 19:25:04 GMT  
+		Size: 973.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.10-postgres`
 
 ```console
-$ docker pull geonetwork@sha256:6423a15f53d3162137f71dbe710dc7f63a66d67decadbfe329ca25189f2caf25
+$ docker pull geonetwork@sha256:b686a46c3f5f11e4bb2d79c3f99c6b389895ffa8d2f5795091635e1b03f6729e
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -191,14 +517,14 @@ $ docker pull geonetwork@sha256:6423a15f53d3162137f71dbe710dc7f63a66d67decadbfe3
 ### `geonetwork:3.10-postgres` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:649225ef7c54bd72018bd5721ea4d81ef4d94191b40e9a3dcbcd4395ed9467df
+$ docker pull geonetwork@sha256:933c50af822a3e22aa0560646a18c2f170f0bb930bd509320e2b3374d06591ba
 ```
 
 -	Docker Version: 18.09.7
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **464.3 MB (464324287 bytes)**  
+-	Total Size: **464.4 MB (464377107 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:fec99bae1289c4df5bad8cc0355102f36224917823a6c27dde07ff0c5686ed57`
+-	Image ID: `sha256:dcb4b2f9dc238ff0852a7f2be413d16e5987dbe85f1103bbce0f88384c052480`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -265,31 +591,31 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Wed, 10 Jun 2020 09:36:34 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Wed, 10 Jun 2020 09:36:34 GMT
-ENV GN_VERSION=3.10.2
-# Wed, 10 Jun 2020 09:36:34 GMT
-ENV GN_DOWNLOAD_MD5=d2900cdda7aafaada326a36a86f6296a
-# Wed, 10 Jun 2020 09:36:34 GMT
+# Thu, 25 Jun 2020 19:22:47 GMT
+ENV GN_VERSION=3.10.3
+# Thu, 25 Jun 2020 19:22:47 GMT
+ENV GN_DOWNLOAD_MD5=f6d62ef8856d697e62c7cbde65e66ad7
+# Thu, 25 Jun 2020 19:22:48 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Wed, 10 Jun 2020 09:36:58 GMT
-RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/geonetwork.war/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Wed, 10 Jun 2020 09:36:59 GMT
+# Thu, 25 Jun 2020 19:23:55 GMT
+RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
+# Thu, 25 Jun 2020 19:23:55 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Wed, 10 Jun 2020 09:36:59 GMT
+# Thu, 25 Jun 2020 19:23:55 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Wed, 10 Jun 2020 09:36:59 GMT
+# Thu, 25 Jun 2020 19:23:56 GMT
 CMD ["catalina.sh" "run"]
-# Wed, 10 Jun 2020 09:37:11 GMT
+# Thu, 25 Jun 2020 19:24:17 GMT
 RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/lib/apt/lists/*
-# Wed, 10 Jun 2020 09:37:12 GMT
-RUN sed -i -e 's#<import resource="../config-db/h2.xml"/>#<!--<import resource="../config-db/h2.xml"/> -->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
-# Wed, 10 Jun 2020 09:37:12 GMT
-COPY file:2dedfd940a86106b2ae284c537f14d365881c03a01b212f81b49177bb22c8d7a in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
-# Wed, 10 Jun 2020 09:37:12 GMT
+# Thu, 25 Jun 2020 19:24:18 GMT
+RUN sed -i -e 's#<import resource="../config-db/${geonetwork.db.type:h2}.xml"/>#<!--<import resource="../config-db/${geonetwork.db.type:h2}.xml"/-->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
+# Thu, 25 Jun 2020 19:24:18 GMT
+COPY file:83f69d2041e5fb378033b0db57e096c81ba0725102ab4da4f089685e748fcce3 in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
+# Thu, 25 Jun 2020 19:24:18 GMT
 COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
-# Wed, 10 Jun 2020 09:37:13 GMT
+# Thu, 25 Jun 2020 19:24:18 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Wed, 10 Jun 2020 09:37:13 GMT
+# Thu, 25 Jun 2020 19:24:19 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -334,29 +660,29 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Wed, 10 Jun 2020 08:45:38 GMT  
 		Size: 130.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:75c708b69fb84427e298b0f711c997fceebd588f4e34810c22c6eba70feb6aa6`  
-		Last Modified: Wed, 10 Jun 2020 09:41:02 GMT  
-		Size: 211.4 MB (211370648 bytes)  
+	-	`sha256:fd707bb67af77b045bb156637db8ffb37e40ac2ff795a085472b87adc2e2c824`  
+		Last Modified: Thu, 25 Jun 2020 19:24:57 GMT  
+		Size: 211.4 MB (211422887 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:acc721f8e5c48a2c146f91838a1fe6f42472f48b28bcec65ce5ef4ce9ee3171b`  
-		Last Modified: Wed, 10 Jun 2020 09:40:47 GMT  
+	-	`sha256:1199fdd3ff58cb074a3e1da0f83f3de8908606b0a8f7a4043c5357f9a23d5143`  
+		Last Modified: Thu, 25 Jun 2020 19:24:39 GMT  
 		Size: 249.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:f6fe7ba7bce62f40f3680cb70d3b02689865ca4e5dfb6c3c5504a9ee96ee7883`  
-		Last Modified: Wed, 10 Jun 2020 09:41:12 GMT  
-		Size: 11.8 MB (11809048 bytes)  
+	-	`sha256:ed4db66199e0e2ff55eb78b81050360fcb556c3b9354d34fe2844a2dafc5a268`  
+		Last Modified: Thu, 25 Jun 2020 19:25:05 GMT  
+		Size: 11.8 MB (11808968 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:80eb0e1a1f2de445bc6f781746ed398ccbf416f3aaf7e45e7c85b5c41a214bc9`  
-		Last Modified: Wed, 10 Jun 2020 09:41:09 GMT  
-		Size: 1.2 KB (1187 bytes)  
+	-	`sha256:feed4f840ad95d713d5d3bffa29b3403d60861fd5cacdf7895929f7731fea16f`  
+		Last Modified: Thu, 25 Jun 2020 19:25:03 GMT  
+		Size: 1.3 KB (1264 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:7871c6cadfd4c6d60bc31cfc3354bf73027823707e71db364f50bda08b490782`  
-		Last Modified: Wed, 10 Jun 2020 09:41:09 GMT  
-		Size: 537.0 B  
+	-	`sha256:b49ba22d9d4885283a0ac8bc10d36a90e5ee30f458b57a1c80ed3d47731f0222`  
+		Last Modified: Thu, 25 Jun 2020 19:25:03 GMT  
+		Size: 1.1 KB (1122 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:2bf61a533aa187728e53f89d23a5aa714cb82dd195ed1267140c84caf145e78d`  
-		Last Modified: Wed, 10 Jun 2020 09:41:09 GMT  
-		Size: 974.0 B  
+	-	`sha256:a75ae392ec8c118964c7e38503fa6f3e105e3c749fa6985eeb1af72ac03d8005`  
+		Last Modified: Thu, 25 Jun 2020 19:25:04 GMT  
+		Size: 973.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.8`
@@ -1690,7 +2016,7 @@ CMD ["catalina.sh" "run"]
 ## `geonetwork:latest`
 
 ```console
-$ docker pull geonetwork@sha256:0776811a24725846ba0b0ce9094e24a63e345ac91e0d8a3e6967ea36375be92f
+$ docker pull geonetwork@sha256:6db0b9dcdc03ed0a0d2060668d5bead7c9edb7fda0cf938fca434cb178503c2d
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -1700,14 +2026,14 @@ $ docker pull geonetwork@sha256:0776811a24725846ba0b0ce9094e24a63e345ac91e0d8a3e
 ### `geonetwork:latest` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:67652389aa44771ce3895d287858f0bec37cb3a4fbc24a3d802f0ae226e5a501
+$ docker pull geonetwork@sha256:90e9bdd348761850e9d3c6631f3a4efe23aa801d32d4fedb1971e1820eb053bb
 ```
 
 -	Docker Version: 18.09.7
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **452.5 MB (452512541 bytes)**  
+-	Total Size: **452.6 MB (452564780 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:24cb502d50b674a53ffd27f8602252246042671a6d7e9f36a4fc482b10bee597`
+-	Image ID: `sha256:0bd9014e0b03811d546c7d1e92350cdcbe62757a380fc5f5cacfa6707de30612`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -1774,19 +2100,19 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Wed, 10 Jun 2020 09:36:34 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Wed, 10 Jun 2020 09:36:34 GMT
-ENV GN_VERSION=3.10.2
-# Wed, 10 Jun 2020 09:36:34 GMT
-ENV GN_DOWNLOAD_MD5=d2900cdda7aafaada326a36a86f6296a
-# Wed, 10 Jun 2020 09:36:34 GMT
+# Thu, 25 Jun 2020 19:22:47 GMT
+ENV GN_VERSION=3.10.3
+# Thu, 25 Jun 2020 19:22:47 GMT
+ENV GN_DOWNLOAD_MD5=f6d62ef8856d697e62c7cbde65e66ad7
+# Thu, 25 Jun 2020 19:22:48 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Wed, 10 Jun 2020 09:36:58 GMT
-RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/geonetwork.war/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Wed, 10 Jun 2020 09:36:59 GMT
+# Thu, 25 Jun 2020 19:23:55 GMT
+RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
+# Thu, 25 Jun 2020 19:23:55 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Wed, 10 Jun 2020 09:36:59 GMT
+# Thu, 25 Jun 2020 19:23:55 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Wed, 10 Jun 2020 09:36:59 GMT
+# Thu, 25 Jun 2020 19:23:56 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -1831,19 +2157,19 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Wed, 10 Jun 2020 08:45:38 GMT  
 		Size: 130.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:75c708b69fb84427e298b0f711c997fceebd588f4e34810c22c6eba70feb6aa6`  
-		Last Modified: Wed, 10 Jun 2020 09:41:02 GMT  
-		Size: 211.4 MB (211370648 bytes)  
+	-	`sha256:fd707bb67af77b045bb156637db8ffb37e40ac2ff795a085472b87adc2e2c824`  
+		Last Modified: Thu, 25 Jun 2020 19:24:57 GMT  
+		Size: 211.4 MB (211422887 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:acc721f8e5c48a2c146f91838a1fe6f42472f48b28bcec65ce5ef4ce9ee3171b`  
-		Last Modified: Wed, 10 Jun 2020 09:40:47 GMT  
+	-	`sha256:1199fdd3ff58cb074a3e1da0f83f3de8908606b0a8f7a4043c5357f9a23d5143`  
+		Last Modified: Thu, 25 Jun 2020 19:24:39 GMT  
 		Size: 249.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:postgres`
 
 ```console
-$ docker pull geonetwork@sha256:6423a15f53d3162137f71dbe710dc7f63a66d67decadbfe329ca25189f2caf25
+$ docker pull geonetwork@sha256:b686a46c3f5f11e4bb2d79c3f99c6b389895ffa8d2f5795091635e1b03f6729e
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -1853,14 +2179,14 @@ $ docker pull geonetwork@sha256:6423a15f53d3162137f71dbe710dc7f63a66d67decadbfe3
 ### `geonetwork:postgres` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:649225ef7c54bd72018bd5721ea4d81ef4d94191b40e9a3dcbcd4395ed9467df
+$ docker pull geonetwork@sha256:933c50af822a3e22aa0560646a18c2f170f0bb930bd509320e2b3374d06591ba
 ```
 
 -	Docker Version: 18.09.7
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **464.3 MB (464324287 bytes)**  
+-	Total Size: **464.4 MB (464377107 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:fec99bae1289c4df5bad8cc0355102f36224917823a6c27dde07ff0c5686ed57`
+-	Image ID: `sha256:dcb4b2f9dc238ff0852a7f2be413d16e5987dbe85f1103bbce0f88384c052480`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -1927,31 +2253,31 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Wed, 10 Jun 2020 09:36:34 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Wed, 10 Jun 2020 09:36:34 GMT
-ENV GN_VERSION=3.10.2
-# Wed, 10 Jun 2020 09:36:34 GMT
-ENV GN_DOWNLOAD_MD5=d2900cdda7aafaada326a36a86f6296a
-# Wed, 10 Jun 2020 09:36:34 GMT
+# Thu, 25 Jun 2020 19:22:47 GMT
+ENV GN_VERSION=3.10.3
+# Thu, 25 Jun 2020 19:22:47 GMT
+ENV GN_DOWNLOAD_MD5=f6d62ef8856d697e62c7cbde65e66ad7
+# Thu, 25 Jun 2020 19:22:48 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Wed, 10 Jun 2020 09:36:58 GMT
-RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/geonetwork.war/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Wed, 10 Jun 2020 09:36:59 GMT
+# Thu, 25 Jun 2020 19:23:55 GMT
+RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
+# Thu, 25 Jun 2020 19:23:55 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Wed, 10 Jun 2020 09:36:59 GMT
+# Thu, 25 Jun 2020 19:23:55 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Wed, 10 Jun 2020 09:36:59 GMT
+# Thu, 25 Jun 2020 19:23:56 GMT
 CMD ["catalina.sh" "run"]
-# Wed, 10 Jun 2020 09:37:11 GMT
+# Thu, 25 Jun 2020 19:24:17 GMT
 RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/lib/apt/lists/*
-# Wed, 10 Jun 2020 09:37:12 GMT
-RUN sed -i -e 's#<import resource="../config-db/h2.xml"/>#<!--<import resource="../config-db/h2.xml"/> -->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
-# Wed, 10 Jun 2020 09:37:12 GMT
-COPY file:2dedfd940a86106b2ae284c537f14d365881c03a01b212f81b49177bb22c8d7a in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
-# Wed, 10 Jun 2020 09:37:12 GMT
+# Thu, 25 Jun 2020 19:24:18 GMT
+RUN sed -i -e 's#<import resource="../config-db/${geonetwork.db.type:h2}.xml"/>#<!--<import resource="../config-db/${geonetwork.db.type:h2}.xml"/-->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
+# Thu, 25 Jun 2020 19:24:18 GMT
+COPY file:83f69d2041e5fb378033b0db57e096c81ba0725102ab4da4f089685e748fcce3 in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
+# Thu, 25 Jun 2020 19:24:18 GMT
 COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
-# Wed, 10 Jun 2020 09:37:13 GMT
+# Thu, 25 Jun 2020 19:24:18 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Wed, 10 Jun 2020 09:37:13 GMT
+# Thu, 25 Jun 2020 19:24:19 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -1996,27 +2322,27 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Wed, 10 Jun 2020 08:45:38 GMT  
 		Size: 130.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:75c708b69fb84427e298b0f711c997fceebd588f4e34810c22c6eba70feb6aa6`  
-		Last Modified: Wed, 10 Jun 2020 09:41:02 GMT  
-		Size: 211.4 MB (211370648 bytes)  
+	-	`sha256:fd707bb67af77b045bb156637db8ffb37e40ac2ff795a085472b87adc2e2c824`  
+		Last Modified: Thu, 25 Jun 2020 19:24:57 GMT  
+		Size: 211.4 MB (211422887 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:acc721f8e5c48a2c146f91838a1fe6f42472f48b28bcec65ce5ef4ce9ee3171b`  
-		Last Modified: Wed, 10 Jun 2020 09:40:47 GMT  
+	-	`sha256:1199fdd3ff58cb074a3e1da0f83f3de8908606b0a8f7a4043c5357f9a23d5143`  
+		Last Modified: Thu, 25 Jun 2020 19:24:39 GMT  
 		Size: 249.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:f6fe7ba7bce62f40f3680cb70d3b02689865ca4e5dfb6c3c5504a9ee96ee7883`  
-		Last Modified: Wed, 10 Jun 2020 09:41:12 GMT  
-		Size: 11.8 MB (11809048 bytes)  
+	-	`sha256:ed4db66199e0e2ff55eb78b81050360fcb556c3b9354d34fe2844a2dafc5a268`  
+		Last Modified: Thu, 25 Jun 2020 19:25:05 GMT  
+		Size: 11.8 MB (11808968 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:80eb0e1a1f2de445bc6f781746ed398ccbf416f3aaf7e45e7c85b5c41a214bc9`  
-		Last Modified: Wed, 10 Jun 2020 09:41:09 GMT  
-		Size: 1.2 KB (1187 bytes)  
+	-	`sha256:feed4f840ad95d713d5d3bffa29b3403d60861fd5cacdf7895929f7731fea16f`  
+		Last Modified: Thu, 25 Jun 2020 19:25:03 GMT  
+		Size: 1.3 KB (1264 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:7871c6cadfd4c6d60bc31cfc3354bf73027823707e71db364f50bda08b490782`  
-		Last Modified: Wed, 10 Jun 2020 09:41:09 GMT  
-		Size: 537.0 B  
+	-	`sha256:b49ba22d9d4885283a0ac8bc10d36a90e5ee30f458b57a1c80ed3d47731f0222`  
+		Last Modified: Thu, 25 Jun 2020 19:25:03 GMT  
+		Size: 1.1 KB (1122 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:2bf61a533aa187728e53f89d23a5aa714cb82dd195ed1267140c84caf145e78d`  
-		Last Modified: Wed, 10 Jun 2020 09:41:09 GMT  
-		Size: 974.0 B  
+	-	`sha256:a75ae392ec8c118964c7e38503fa6f3e105e3c749fa6985eeb1af72ac03d8005`  
+		Last Modified: Thu, 25 Jun 2020 19:25:04 GMT  
+		Size: 973.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
